viewport units on mobile fix...

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -75,6 +75,9 @@
   width: 90%;
   margin: 1.5%;
 }
+#nametag {
+    font-size: 9.5vh;
+}
 }
 
 /*****************************************************************************/
